# jamcounter

./: .gitignore  Cargo.toml  README.md  config.toml
src/: config.rs  lib.rs  main.rs  ranked_choice.rs  runner.rs  scraping.rs
src/ai/: categories.rs  classifier.rs  message.rs  mod.rs  scanner.rs
src/clustering/: games.rs  mod.rs  text.rs
