[package]
name = "jamcounter"
version = "0.1.0"
authors = ["Mercerenies"]
edition = "2024"

[dependencies]
anyhow = "1.0.102"
figment = { version = "0.10.19", features = ["env"] }
openai = "1.1.1"
reqwest = { version = "0.13.2", features = ["blocking"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.50.0"
