[package]
name = "jamcounter"
version = "0.1.0"
authors = ["Mercerenies"]
edition = "2024"

[dependencies]
anyhow = "1.0.102"
figment = { version = "0.10.19", features = ["env", "toml"] }
futures = "0.3.32"
openai = "1.1.1"
ordered-float = "5.1.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.50.0"
